# Projects-ShtabC-

./: README.md  Source.cpp  Source2.cpp
10/: Source10.1.cpp  Source10.2.cpp  Source10.3.cpp
11/: Source11.1.cpp  Source11.2.cpp
12/: Source12.1.cpp
12/12.1/: in.txt
12/12.2/: Source12.2.cpp  in.txt
12/12.3/: Source12.3.cpp  out.txt
12/12.4/: Source12.4.cpp  in.txt
3/: Source3.2.cpp
4/: Source4.1.cpp
5/: Source5.1.cpp  Source5.2.cpp  Source5.3.cpp  Source5.4.cpp
6/: Source6.1.cpp  Source6.2.cpp  Source6.3.1.cpp  Source6.3.cpp
7/: Source7.1.cpp  Source7.2.cpp
8/: Source8.1.cpp  Source8.2.cpp
9/: Source9.1.cpp  Source9.2.cpp  Source9.3.cpp
Kursovoi. Racing/: CMakeLists.txt
Kursovoi. Racing/lib/: Air.cpp  Air.h  Allterrain_boots.cpp  Allterrain_boots.h  Broom.cpp  CMakeLists.txt  Camel.cpp  Camel.h  Camel_runner.cpp  Camel_runner.h  Centaur.cpp  Centaur.h  Eagle.cpp  Flying_carpet.h  Race_Air.h  Race_ground.cpp  Race_ground.h  Transport.h
Kursovoi. Simulation Race/: Allterrain_boots.cpp  Broom.cpp  Broom.h  CMakeLists.txt  Camel.cpp  Camel_runner.cpp  Centaur.cpp  Eagle.h  Flying_carpet.cpp  Ground.cpp  Ground.h  Project1.slnx  Project1.vcxproj  Project1.vcxproj.filters  Race.cpp  Race.h  Race_Air.cpp  Source.cpp  Transport.cpp
Kursovoi_Live/: Source.cpp  in.txt
Алгоритмы и структуры данных/Введение в алгоритмическую сложность. Бинпоиск/Задание 1. Оценка алгосложности программы./: Answer
Алгоритмы и структуры данных/Введение в алгоритмическую сложность. Бинпоиск/Задание 2. Поиск в массиве./: Project1.slnx  Project1.vcxproj  Source.cpp  UnitTest1.cpp  UnitTest1.vcxproj
Алгоритмы и структуры данных/Динамическое программирование и жадность/: README.md
Алгоритмы и структуры данных/Динамическое программирование и жадность/Задание 2. Ускоряем Фибоначчи/: README.md  (+1 more)
Базовое програмирование/Первый урок/: Source1.1.cpp  Source1.3.cpp
Базовое программирование/CMake/Задача 2. Проект посложнее/: CMakeLists.txt  Cmake_2.slnx  figure.cpp  figure.h  isosceles.cpp  main_3.cpp  main_3.h  parallelogram.cpp  parallelogram.h  quadrilateral.cpp  rectangle.cpp  rectangular.cpp  romb.h  square.cpp  square.h  triangle.cpp  triangle.h
Базовое программирование/Сборка и подключение библиотек/Динамическая библиотека  CMake/: CMakeLists.txt  user_name_dynamic.cpp  user_name_dynamic.h  user_name_dynamic_client.cpp
(+174 files in other folders)
