cmake_minimum_required(VERSION 3.22.0)
project(hard)
add_executable(hard main_3.cpp "main_3.h" "equilateral.cpp" "figure.cpp" "isosceles.cpp" "parallelogram.cpp" "quadrilateral.cpp" "rectangle.cpp" "rectangular.cpp" "romb.cpp" "square.cpp" "triangle.cpp" "equilateral.h" "figure.h" "isosceles.h" "parallelogram.h" "quadrilateral.h" "rectangle.h" "rectangular.h" "romb.h" "square.h" "triangle.h")